--- a/fly.toml
+++ b/fly.toml
@@ -34,3 +34,11 @@ protocol = "tcp"
 [[services.ports]]
 handlers = []
 port = 5003
+
+[[services]]
+internal_port = 5004
+protocol = "tcp"
+
+[[services.ports]]
+handlers = []
+port = 5004
