Finish problem 5: mob in the middle

--- a/fly.toml
+++ b/fly.toml
@@ -50,3 +50,11 @@ protocol = "udp"
 [[services.ports]]
 handlers = []
 port = 5005
+
+[[services]]
+internal_port = 5006
+protocol = "tcp"
+
+[[services.ports]]
+handlers = []
+port = 5006
